<resources>
    <string name="app_name">EZ-Leave</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_logout">Log Out</string>

    <string name="menu_calendar">Calendar View</string>
    <string name="menu_leave_apply">New Leave Application</string>
    <string name="menu_history">Leave Application History</string>
    <string name="menu_approval">Leave Approval</string>
    <string name="menu_statistics">Statistics</string>
    <string name="menu_profile">Profile</string>
    <string name="title_activity_navigation_admin">NavigationAdminActivity</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
</resources>