<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/top_nav_admin"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/menu_profile" />
    </group>
    <group
        android:id="@+id/bot_nav_admin"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_calendar"
            android:icon="@drawable/ic_calendar"
            android:title="@string/menu_calendar" />
        <item
            android:id="@+id/nav_new_application"
            android:icon="@drawable/ic_new_application"
            android:title="@string/menu_leave_apply" />
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_history"
            android:title="@string/menu_history" />
        <item
            android:id="@+id/nav_approval"
            android:icon="@drawable/ic_approve"
            android:title="@string/menu_approval"
            app:actionViewClass="android.widget.TextView"/>
        <item
            android:id="@+id/nav_statistics"
            android:icon="@drawable/ic_statistics"
            android:title="@string/menu_statistics" />
    </group>
</menu>